--- a/section_2/sec_2_classes/package.json
+++ b/section_2/sec_2_classes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-first-app",
+  "name": "sec-2-classes",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,7 +20,6 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^3.4.1",
     "rxjs": "~7.5.0",
-    "serve": "^14.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
